# eagleeye

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SHARED_TASK_NOTES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/: __main__.py  app.py  claude_agent.py  config.py  log_config.py  slack_formatter.py
src/eagleeye/: __init__.py  __main__.py  app.py  config.py  logging.py
src/eagleeye/integrations/: __init__.py  linear.py  notion.py  slack_search.py
src/eagleeye/mcp/: __init__.py  client.py  servers.py
src/eagleeye/models/: __init__.py
src/mcp_integration/: __init__.py  client.py  servers.py
src/models/: __init__.py  search.py
tests/: __init__.py  conftest.py  test_app.py  test_claude_agent.py  test_linear.py  test_mcp.py  test_models.py  test_notion.py  test_slack_formatter.py  test_slack_search.py
